--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@ title: La voragine
 description: |
   LaVoragine.org es un laboratorio de edición digital.
 
-url: http://lavoragine.org
+url: https://lavoraginelab.github.io/lavoragine.org/
 
 about_title: Nosotros
 projects_title: Home
