--- a/package.json
+++ b/package.json
@@ -1,21 +1,22 @@
 {
-  "name": "personalsite",
-  "version": "1.1.0",
-  "description": "",
+  "name": "Jekyll-Gulp-Sass-Autoprefixer-Imagemin-BrowserSync",
+  "version": "1.0.0",
+  "description": "A starter project for Jekyll",
   "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "author": "Louis Rassaby",
-  "license": "ISC",
+  "repository": "https://github.com/artemsheludko/Jekyll-Gulp-Sass-Autoprefixer-Imagemin-BrowserSync",
+  "author": "Artem Sheludko",
+  "license": "MIT",
   "dependencies": {
-    "browser-sync": "^2.23.6",
+    "browser-sync": "^2.18.8",
+    "child_process": "^1.0.2",
     "gulp": "^3.9.1",
-    "gulp-concat": "^2.6.1",
-    "gulp-csso": "^2.0.0",
-    "gulp-imagemin": "^3.4.0",
-    "gulp-plumber": "^1.2.0",
-    "gulp-sass": "^3.2.1",
-    "gulp-uglify": "^2.0.0"
+    "gulp-autoprefixer": "^3.1.1",
+    "gulp-cache": "^0.4.6",
+    "gulp-imagemin": "^3.2.0",
+    "gulp-sass": "^3.1.0",
+    "imagemin-pngquant": "^5.0.0"
+  },
+  "scripts": {
+    "dev": "node_modules\\.bin\\gulp watch"
   }
 }
