--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
-  "name": "personalsite",
-  "version": "1.1.0",
+  "name": "LaVoragine",
+  "version": "0.9.0",
   "description": "",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "Louis Rassaby",
+  "author": "Lucho Tapia",
   "license": "ISC",
   "dependencies": {
     "browser-sync": "^2.23.6",
