añadir post sobre creación de libro + audio

--- a/_config.yml
+++ b/_config.yml
@@ -20,7 +20,7 @@ user_description_appendix: |
 
 email: info@lavoragine.org
 linkedin: nastarovia
-github: nastarovia
+github: voragine
 
 relevant_tags: ['Proyectos', 'Edicion digital', 'Blog', 'Libros']
 
