--- a/_config.yml
+++ b/_config.yml
@@ -31,7 +31,7 @@ author: la Vorágine
 author_title: Un laboratorio de edición digital, open source & accesible
 author_photo: logo.png
 user_description_short: |
-  Este sitio es un laboratorio: probamos cosas y te explicamos como nos fue. Nuestro tema es la edición digital. Open source, accesible & libre.
+  La Vorágine es una editorial independiente, dedicada a la publicación de libros deliciosamente extraños, que campan en las fronteras entre géneros, esos lugares peligrosos y propensos a la belleza. Nuestros libros son (casi siempre) primeras traducciones de autores esenciales y nunca (o muy poco) publicados en lengua española, en ediciones que procuramos sean completas, accesibles y cuidadas. 
 
 
 ## Disqus
